--- a/styles/Home.sass
+++ b/styles/Home.sass
@@ -1,278 +1,406 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
-}
+// .main 
+//   display: flex
+//   flex-direction: column
+//   justify-content: space-between
+//   align-items: center
+//   padding: 6rem
+//   min-height: 100vh
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
 
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-}
+// .description 
+//   display: inherit
+//   justify-content: inherit
+//   align-items: inherit
+//   font-size: 0.85rem
+//   max-width: var(--max-width)
+//   width: 100%
+//   z-index: 2
+//   font-family: var(--font-mono)
 
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
-}
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
+// .description a 
+//   display: flex
+//   justify-content: center
+//   align-items: center
+//   gap: 0.5rem
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
-  max-width: 100%;
-}
 
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
+// .description p 
+//   position: relative
+//   margin: 0
+//   padding: 1rem
+//   background-color: rgba(var(--callout-rgb), 0.5)
+//   border: 1px solid rgba(var(--callout-border-rgb), 0.3)
+//   border-radius: var(--border-radius)
 
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
 
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
+// .code 
+//   font-weight: 700
+//   font-family: var(--font-mono)
 
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
 
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
+// .grid 
+//   display: grid
+//   grid-template-columns: repeat(4, minmax(25%, auto))
+//   width: var(--max-width)
+//   max-width: 100%
 
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
 
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
+// .card 
+//   padding: 1rem 1.2rem
+//   border-radius: var(--border-radius)
+//   background: rgba(var(--card-rgb), 0)
+//   border: 1px solid rgba(var(--card-border-rgb), 0)
+//   transition: background 200ms, border 200ms
 
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
 
-.logo,
-.thirteen {
-  position: relative;
-}
+// .card span 
+//   display: inline-block
+//   transition: transform 200ms
 
-.thirteen {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 75px;
-  height: 75px;
-  padding: 25px 10px;
-  margin-left: 16px;
-  transform: translateZ(0);
-  border-radius: var(--border-radius);
-  overflow: hidden;
-  box-shadow: 0px 2px 8px -1px #0000001a;
-}
 
-.thirteen::before,
-.thirteen::after {
-  content: '';
-  position: absolute;
-  z-index: -1;
-}
+// .card h2 
+//   font-weight: 600
+//   margin-bottom: 0.7rem
 
-/* Conic Gradient Animation */
-.thirteen::before {
-  animation: 6s rotate linear infinite;
-  width: 200%;
-  height: 200%;
-  background: var(--tile-border);
-}
 
-/* Inner Square */
-.thirteen::after {
-  inset: 0;
-  padding: 1px;
-  border-radius: var(--border-radius);
-  background: linear-gradient(
-    to bottom right,
-    rgba(var(--tile-start-rgb), 1),
-    rgba(var(--tile-end-rgb), 1)
-  );
-  background-clip: content-box;
-}
+// .card p 
+//   margin: 0
+//   opacity: 0.6
+//   font-size: 0.9rem
+//   line-height: 1.5
+//   max-width: 30ch
 
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
 
-  .card:hover span {
-    transform: translateX(4px);
-  }
-}
+// .center 
+//   display: flex
+//   justify-content: center
+//   align-items: center
+//   position: relative
+//   padding: 4rem 0
 
-@media (prefers-reduced-motion) {
-  .thirteen::before {
-    animation: none;
-  }
 
-  .card:hover span {
-    transform: none;
-  }
-}
+// .center::before 
+//   background: var(--secondary-glow)
+//   border-radius: 50%
+//   width: 480px
+//   height: 360px
+//   margin-left: -400px
 
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
 
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
+// .center::after 
+//   background: var(--primary-glow)
+//   width: 240px
+//   height: 180px
+//   z-index: -1
 
-  .card {
-    padding: 1rem 2.5rem;
-  }
 
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
+// .center::before,
+// .center::after 
+//   content: ''
+//   left: 50%
+//   position: absolute
+//   filter: blur(45px)
+//   transform: translateZ(0)
 
-  .center {
-    padding: 8rem 0 6rem;
-  }
 
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
+// .logo,
+// .thirteen 
+//   position: relative
 
-  .description {
-    font-size: 0.8rem;
-  }
 
-  .description a {
-    padding: 1rem;
-  }
+// .thirteen 
+//   display: flex
+//   justify-content: center
+//   align-items: center
+//   width: 75px
+//   height: 75px
+//   padding: 25px 10px
+//   margin-left: 16px
+//   transform: translateZ(0)
+//   border-radius: var(--border-radius)
+//   overflow: hidden
+//   box-shadow: 0px 2px 8px -1px #0000001a
 
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
 
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
+// .thirteen::before,
+// .thirteen::after 
+//   content: ''
+//   position: absolute
+//   z-index: -1
 
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
-}
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
-}
+// /* Conic Gradient Animation */
+// .thirteen::before 
+//   animation: 6s rotate linear infinite
+//   width: 200%
+//   height: 200%
+//   background: var(--tile-border)
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
 
-  .logo,
-  .thirteen img {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
+// /* Inner Square */
+// .thirteen::after 
+//   inset: 0
+//   padding: 1px
+//   border-radius: var(--border-radius)
+//   background: linear-gradient(
+//     to bottom right,
+//     rgba(var(--tile-start-rgb), 1),
+//     rgba(var(--tile-end-rgb), 1)
+//   )
+//   background-clip: content-box
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
-}
+
+// /* Enable hover only on non-touch devices */
+// @media (hover: hover) and (pointer: fine) 
+//   .card:hover 
+//     background: rgba(var(--card-rgb), 0.1)
+//     border: 1px solid rgba(var(--card-border-rgb), 0.15)
+  
+
+//   .card:hover span 
+//     transform: translateX(4px)
+  
+
+
+// @media (prefers-reduced-motion) 
+//   .thirteen::before 
+//     animation: none
+  
+
+//   .card:hover span 
+//     transform: none
+  
+
+
+// /* Mobile */
+// @media (max-width: 700px) 
+//   .content 
+//     padding: 4rem
+  
+
+//   .grid 
+//     grid-template-columns: 1fr
+//     margin-bottom: 120px
+//     max-width: 320px
+//     text-align: center
+  
+
+//   .card 
+//     padding: 1rem 2.5rem
+  
+
+//   .card h2 
+//     margin-bottom: 0.5rem
+  
+
+//   .center 
+//     padding: 8rem 0 6rem
+  
+
+//   .center::before 
+//     transform: none
+//     height: 300px
+  
+
+//   .description 
+//     font-size: 0.8rem
+  
+
+//   .description a 
+//     padding: 1rem
+  
+
+//   .description p,
+//   .description div 
+//     display: flex
+//     justify-content: center
+//     position: fixed
+//     width: 100%
+  
+
+//   .description p 
+//     align-items: center
+//     inset: 0 0 auto
+//     padding: 2rem 1rem 1.4rem
+//     border-radius: 0
+//     border: none
+//     border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25)
+//     background: linear-gradient(
+//       to bottom,
+//       rgba(var(--background-start-rgb), 1),
+//       rgba(var(--callout-rgb), 0.5)
+//     )
+//     background-clip: padding-box
+//     backdrop-filter: blur(24px)
+  
+
+//   .description div 
+//     align-items: flex-end
+//     pointer-events: none
+//     inset: auto 0 0
+//     padding: 2rem
+//     height: 200px
+//     background: linear-gradient(
+//       to bottom,
+//       transparent 0%,
+//       rgb(var(--background-end-rgb)) 40%
+//     )
+//     z-index: 1
+  
+
+
+// /* Tablet and Smaller Desktop */
+// @media (min-width: 701px) and (max-width: 1120px) 
+//   .grid 
+//     grid-template-columns: repeat(2, 50%)
+  
+
+
+// @media (prefers-color-scheme: dark) 
+//   .vercelLogo 
+//     filter: invert(1)
+  
+
+//   .logo,
+//   .thirteen img 
+//     filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70)
+  
+
+
+// @keyframes rotate 
+//   from 
+//     transform: rotate(360deg)
+  
+//   to 
+//     transform: rotate(0deg)
+  
+
+ul
+  list-style: none
+
+header
+  height: 300px
+  background: linear-gradient(305deg, #dbfff3, transparent)
+  padding: 15px 30px
+
+  >div
+    width: 100%
+    max-width: 1250px
+    margin: auto
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+  .title
+    width: 50%
+    font-size: 40px
+    text-transform: uppercase
+  .topNav
+    display: flex
+    justify-content: space-between
+    align-content: center
+    ul
+      display: flex
+      text-decoration: none
+      list-style: none
+      gap: 15px
+      li
+        font-weight: 600
+        font-size: 16px
+
+footer
+  background-color: #333
+  color: #fff
+  padding: 10px
+  text-align: center
+
+main
+  width: 100%
+  max-width: 1250px
+  margin: auto
+  padding: 80px 30px
+  min-height: 550px
+
+.home_body
+  display: flex
+  flex-direction: column
+  gap: 50px
+  .image
+    width: 40%
+  .card
+    display: flex
+    flex-direction: row
+    gap: 30px
+    justify-content: center
+    align-content: center
+    align-items: center
+    &:nth-child(even)
+      direction: rtl
+    .content
+      width: 50%
+
+.about_us_list
+  display: flex
+  flex-direction: column
+
+.events_page
+  display: flex
+  flex-direction: row
+  gap: 20px
+  .card
+    position: relative
+    h2
+      position: absolute
+      width: 100%
+      top: 50%
+      text-align: center
+      font-size: 38px
+      color: white
+      text-transform: uppercase
+      text-shadow: 1px 1px 20px black
+
+.cat_events
+  width: 100%
+  .content
+    display: flex
+    flex-direction: row
+    flex-wrap: wrap
+    gap: 30px
+    width: 100%
+    justify-content: flex-start
+    .card
+      display: flex
+      flex-direction: column
+      width: 30%
+
+.event_single_page
+  .email_registration
+    margin-top: 25px
+    label
+      display: flex
+      margin-bottom: 15px
+      font-size: 18px
+      font-weight: 800
+      text-transform: uppercase
+      margin-top: 25px
+    input
+      height: 40px
+      min-width: 350px
+      box-shadow: none
+      border-radius: 5px
+      border: 1px solid #ccc
+      font-size: 16px
+    button
+      border-radius: 5px
+      height: 40px
+      min-width: 150px
+      border: 1px solid #5f5a5a
+      font-size: 16px
+      text-transform: uppercase
+      margin-left: 10px
+      font-weight: 600
+      background: #dcfff3
+      cursor: pointer
+      &:hover
+        color: #dcfff3
+        background: #333
