--- a/styles/Home.sass
+++ b/styles/Home.sass
@@ -77,14 +77,18 @@ main
   display: flex
   flex-direction: row
   gap: 20px
+  display: flex
+  justify-content: center
+  align-content: center
+  flex-wrap: wrap
   .card
     position: relative
     h2
       position: absolute
       width: 100%
-      top: 50%
+      top: 65%
       text-align: center
-      font-size: 38px
+      font-size: 22px
       color: white
       text-transform: uppercase
       text-shadow: 1px 1px 20px black
