--- a/styles/Home.sass
+++ b/styles/Home.sass
@@ -48,8 +48,8 @@ main
   width: 100%
   max-width: 1250px
   margin: auto
-  padding: 80px 30px
-  min-height: 550px
+  padding: 44px 30px
+  min-height: 500px
 
 .home_body
   display: flex
@@ -67,7 +67,7 @@ main
     &:nth-child(even)
       direction: rtl
     .content
-      width: 50%
+      width: 55%
 
 .about_us_list
   display: flex
@@ -95,17 +95,25 @@ main
 
 .cat_events
   width: 100%
+  .cat_header
+    display: flex
+    justify-content: center
+    padding: auto
+    margin-bottom: 25px
   .content
     display: flex
     flex-direction: row
     flex-wrap: wrap
-    gap: 30px
+    gap: 50px
     width: 100%
-    justify-content: flex-start
+    justify-content: center
     .card
       display: flex
       flex-direction: column
       width: 30%
+      margin: auto
+      .img
+        align-self: center
 
 .event_single_page
   .email_registration
