added styling to Event page

--- a/styles/Home.sass
+++ b/styles/Home.sass
@@ -115,6 +115,13 @@ main
       .img
         align-self: center
 
+.event
+  display: flex
+  flex-direction: row
+  flex-wrap: wrap
+  gap: 20px
+  justify-content: center
+
 .event_single_page
   .email_registration
     margin-top: 25px
