with api saving subscribed email to data.json

--- a/styles/Home.sass
+++ b/styles/Home.sass
@@ -126,10 +126,11 @@ main
   .email_registration
     margin-top: 25px
     label
+      // justify-content: center
       display: flex
       margin-bottom: 15px
       font-size: 18px
-      font-weight: 800
+      font-weight: 80
       text-transform: uppercase
       margin-top: 25px
     input
@@ -148,8 +149,9 @@ main
       text-transform: uppercase
       margin-left: 10px
       font-weight: 600
-      background: #dcfff3
+      background: #1fcb8f
       cursor: pointer
+      color: black
       &:hover
         color: #dcfff3
         background: #333
